Adjust text heading titles, use max-width instead of padding to fix resize overlap

--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ h1 {
   border-bottom-left-radius: 100px;
 }
 
+.introduction_section > * {
+  max-width: 780px;
+  margin: 0 auto;
+}
+
 .introduction_section .intro_title h1 {
   font-size: 50px;
   font-family: 'Poppins', sans-serif;
@@ -409,8 +414,9 @@ h1 .l-2 {
 
   .introduction_section {
     justify-content: center;
-    padding-left: 260px;
-    padding-right: 260px;
+    
+    /*padding-left: 260px;
+    padding-right: 260px;*/
     color: #fff;
   }
 
